# AutoChain

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  structs.py
.github/workflows/: docs.yml  latest-changes.yml  publish.yml  smokeshow.yml  test.yml
_layout/: default.html
agent/: output_parser.py  prompt_formatter.py
autochain/: errors.py  utils.py
autochain/agent/: base_agent.py  message.py  prompt_formatter.py  structs.py
autochain/agent/conversational_agent/: conversational_agent.py  output_parser.py  (+2 more)
autochain/chain/: base_chain.py  chain.py  constants.py  langchain_wapper_chain.py  langchain_wrapper_chain.py
autochain/examples/: get_weather_with_conversational_agent.py  get_weather_with_openai_function_agent.py  readme.md  run_openai_function_agent.py  run_support_agent_example.py  upsale_goal_conversational_agent.py  write_poem_with_conversational_agent.py
autochain/memory/: base.py  buffer_memory.py  constants.py  long_term_memory.py  redis_memory.py
autochain/models/: ada_embedding.py  base.py  chat_openai.py  huggingface_text_generation_model.py  readme.md
autochain/tools/: base.py  ifttt.py
autochain/workflows_evaluation/: base_test.py  change_shipping_address_test.py  exchange_request_test.py  improperly_parked_vehicle_test.py  order_status_request_test.py  test_utils.py
docs/: agent.md  chain.md  components_overview.md  doc.md  examples.md  index.md  memory.md  release-notes.md  tool.md  tools.md  workflow-evaluation.md  workflow_evaluation.md
memory/: buffer_memory.py  message.py
minichain/: errors.py  playground.py  structs.py  utils.py
minichain/agent/: base_agent.py  conversational_agent.py  message.py  output_parser.py  prompt.py  prompt_formatter.py  structs.py  support_agent.py
minichain/chain/: base_chain.py  chain.py  constants.py  langchain_wapper_chain.py
minichain/examples/: run_conversational_agent_example.py  run_support_agent_example.py
minichain/memory/: base.py  buffer_memory.py
minichain/models/: base.py  chat_openai.py
minichain/tools/: base.py
minichain/workflow_tests/: base_test.py  change_shipping_address_test.py  exchange_request_test.py  improperly_parked_vehicle_test.py  refund_request_test.py  test_utils.py
minichain/workflows_evaluation/: base_test.py  change_shipping_address_test.py  exchange_request_test.py  improperly_parked_vehicle_test.py  order_status_request_test.py  refund_request_test.py  run_all_tests.py  test_utils.py
overrides/: main.html
test_utils/: __init__.py  pinecone_mocks.py
tests/agent/: test_conversational_agent.py  test_openai_functions_agent.py  test_support_agent.py
tests/common/: pinecone_mocks.py
tests/memory/: test_buffer_memory.py  test_long_term_memory.py  test_redis_memory.py
tests/models/: test_chat_openai.py  test_openai_ada_encoder.py
tests/tools/: test_base_tool.py  test_chromadb_tool.py  test_google_search.py  test_lancedb_tool.py  test_pinecone_tool.py  test_simple_handoff.py
tools/: base.py
workflow_tests/: base_test.py  playgound.py  refund_request_test.py  run_all_tests.py
(+58 files in other folders)
